--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,19 +3,41 @@
   font-family: Consolas,monaco,monospace; 
 }
 
+
+
 .App{
-  background-color: white;
+  background-color: black;
   
   font-size: calc(10px + 2vmin);
-  color: white;
+  
+  margin: 0;
+
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  overflow-x: hidden;
+  
+}
+
 .Wrapper{
+  margin: 0;
   display: grid;
   
   grid-template-columns: 300px 1fr;
-  grid-template-rows: 60px 200vh ;
+  grid-template-rows: 60px 100% ;
   grid-template-areas: "h h"
                        "n c";
+
+}
+
+.WrapperContent {
+  margin: 0;
+  background-color: rgb(36, 36, 36);
 }
 
 
