--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -2,27 +2,6 @@
     height: 100vh;
 }
 
-.login input{
-
-    
-	padding: 6px 0 4px 10px;
-	
-
-    width: 400px;
-    height: 50px;
-
-    font-size: 30px;
-    border-radius: 30px;
-
-    border: 3px solid #424242;
-
-    background-color: rgb(36, 36, 36);
+.input {
     color: #ae7cd8;
-
-}
-
-input:focus,
-input:active
- {
-    border: 3px solid #424242; 
 }
