--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,7 +1,23 @@
 .login {
+    
+    display: flex;
+    width: 100%;
     height: 100vh;
+
+    padding: 200px;
+
+        
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+
 }
 
-.input {
-    color: #ae7cd8;
+
+.LoginPassword {
+    padding: 40px;
+
+    background-color: #ae7cd8;
+    border-radius: 20px;
+    border:#ae7cd8 2px solid 
 }
