поправила кнопки в header, думаю над видимостью кнопок в зависимости от авторизации

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,8 +1,6 @@
 .Header {
   grid-area: h;
 
-  width: 100;
-
   background-color: #000000;
 
   position: relative
@@ -13,12 +11,13 @@
 }
 
 
-.header_button,
-.header_login {
+.header_button{
+  display: auto;
 
-  display: inline-block;
-  width: 200px;
+  width: 150px;
 
+  margin: 7px;
+  padding: 10px;
   box-sizing: border-box;
   cursor: pointer;
 
@@ -27,41 +26,37 @@
   font-size: 20px;
   font-weight: 400;
 
+  color: white;
+
   outline: none;
 
   position: relative;
   text-decoration: none;
 }
 
-.header_button {
-
-  margin: 15px;
-  color: white;
-}
-
-.header_login {
-  width: 100px;
-  height: 40px;
-  padding: 5px;
-  margin: 10px;
-  color: #ffffff;
-  border-radius: 10px;
-  border: 3px solid #ae7cd8;
+#button_login {
+  border-radius: 20px;
+  background-color: #ae7cd8;
 }
 
 .buttons_nav {
+  display: flex;
+  justify-self: center;
+  align-items: center;
   float: right;
 }
 
 #button_logo {
   height: 70%;
   float: left;
-  margin: 10px;
+  margin: 10px 70px 10px 70px;
 }
 
 
-.header_button:hover,
-.header_login:hover {
-
+.header_button:hover{
   color: #ae7cd8;
+}
+
+#button_login:hover {
+  color: #000000;
 }
