--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -40,14 +40,22 @@
 }
 
 .NewPost {
+    display: flex;
+    flex-direction: column;
+
     background-color: #ae7cd8;
     padding: 30px;
     border-radius: 20px;
 }
 
-.ButtonPublish {
+.publish {
     display: flex;
 
-    justify-content: flex-end;
+    float: right;
 
+    width: 100%;
+}
+
+#buttonPublish {
+    /* width: 100px; */
 }
