--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -25,5 +25,14 @@
   background-color: rgb(53, 53, 53);
   color: white;
 }
+
+.myButton:disabled,
+.myButton:disabled:hover,
+.myButton[disabled],
+.myButton[disabled]:hover{
+  border: none;
+  background-color: #c695ee;
+  color: #666666;
+}
   
 
