--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,13 +2,13 @@
   box-sizing: border-box;
 }
 
-*{
+* {
   font-family: Consolas,monaco,monospace; 
 }
 
 
 
-.App{
+.App {
   background-color: black;
   
   font-size: calc(10px + 2vmin);
@@ -23,11 +23,16 @@ html {
 
 body {
   margin: 0;
-  overflow-x: hidden;
-  
 }
 
-.Wrapper{
+.Content {
+  grid-area: c;
+  color: white;
+  background-color: rgb(36, 36, 36);
+  min-height: 100vh;
+}
+
+.Wrapper {
   margin: 0;
   display: grid;
   
@@ -35,7 +40,6 @@ body {
   grid-template-rows: 60px 100% ;
   grid-template-areas: "h h"
                        "n c";
-
 }
 
 .WrapperContent {
