--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,11 +1,4 @@
-.Content{
-    grid-area: c;
-    color: white;
-    background-color: rgb(36, 36, 36);
-  }
-
-
-.Card *{
+.Card * {
     color:#ae7cd8 ;
     font-size: 50px;
 }
@@ -16,23 +9,23 @@
     justify-content: center;
     align-items: center;
 
-    height: 80vh;
+    width: 600px;
+    height: 600px;
     
-    margin: 80px 300px 80px 300px;
+    margin: 100px 300px 100px 300px;
     border-radius: 30px;
     border: 3px solid #ae7cd8;
-    
 }
 
 .Card h1 {
     text-align: center;
+    margin-top: 0;
 }
 
 .logo img {
     height: 200px;
-   
 }
 
-.Card p{
+.Card p {
     margin: 30px;
 }
