--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -8,11 +8,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    width: 600px;
-    height: 600px;
     
-    margin: 100px 300px 100px 300px;
+    margin-top: 30%;
     border-radius: 30px;
     border: 3px solid #ae7cd8;
 }
